RESOLVED FIXED276129
[Navigation] Detect early error in Navigation.navigate
https://bugs.webkit.org/show_bug.cgi?id=276129
Summary [Navigation] Detect early error in Navigation.navigate
Rob Buis
Reported 2024-07-02 10:50:21 PDT
Detect early error in Navigation.navigate.
Attachments
Rob Buis
Comment 1 2024-07-02 11:30:29 PDT
EWS
Comment 2 2024-07-03 01:35:24 PDT
Committed 280616@main (e08a72c3d292): <https://commits.webkit.org/280616@main> Reviewed commits have been landed. Closing PR #30395 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-07-03 01:36:17 PDT
Note You need to log in before you can comment on or make changes to this bug.